--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,25 +17,26 @@ code {
         monospace;
 }
 
-/* width */
 ::-webkit-scrollbar {
     width: 16px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
     background: #f0f7fa;
     border-radius: 2px;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: #cceeff;
     border-radius: 2px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #53c4f7;
+    border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #1c7fac;
     border-radius: 2px;
 }
