--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,11 +5,11 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #e6e5e1;
+    background-color: #1f1f1f;
 }
 
 .MuiDataGrid-row.Mui-odd {
-    background-color: #faf9f5;
+    background-color: #383838;
 }
 
 code {
@@ -22,12 +22,12 @@ code {
 }
 
 ::-webkit-scrollbar-track {
-    background: #f0f7fa;
+    background: #2f2f2f;
     border-radius: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #cceeff;
+    background: #5f5f5f;
     border-radius: 2px;
 }
 
