--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #1f1f1f;
+    background-color: #202020;
 }
 
 .MuiDataGrid-row.Mui-odd {
@@ -22,7 +22,7 @@ code {
 }
 
 ::-webkit-scrollbar-track {
-    background: #2f2f2f;
+    background: #282828;
     border-radius: 2px;
 }
 
